# Comp401

./: BoidSim.cpp  BoidSim.h  CMakeLists.txt  ComplexityPlotter.py  README.md  helloTest.cpp  helloTest.h  multiprocess.h
bc4/: boid_num_100.sh  boid_num_20.sh  boid_num_200.sh  boid_num_2000.sh  boid_num_5.sh  boid_num_50.sh  boid_num_500.sh  boid_num_5000.sh  script.sh  slurm-10532936.out  slurm-10532938.out  slurm-10532939.out
exampleFiles/CudaExample/: cudaExample.cu  cudaExample.cuh
exampleFiles/MPIExample/: MPIAndQueueing.cpp
multithreaded-pi-calc/: picalc.cpp  picalc.h
programFiles/: BoidSim.cpp  BoidSim.h  GeneralFuncs.cpp  Logger.cpp  Program.cpp  VectorArray.cpp
scripts/: compile.sh  job.sh  jobrun.sh  run.sh
simulationData/: AllTogetherAndSmallDt.csv  BasicAlignment.csv  BasicCohesion.csv  BasicSeparation.csv
utils/: ResultsCollector.py  ResultsPlotter.py  ScriptChanger.py  visualiser.py
visualiser/: visualiser.py
